--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "mongoose": "^7.3.4",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
