--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "mongoose": "^7.3.4",
     "next": "13.4.9",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
